@@ -1,3 +1,7 @@
+2023-06-26  vaiorabbit  <http://twitter.com/vaiorabbit>
+
+	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/0c126af7171e51fff9f94c4f2e498f43f60d617b ) and raygui ( https://github.com/raysan5/raygui/commit/fa1c93cdcc6df2cd45f5a1d9249291465a24cd8c )
+
 2023-06-10  vaiorabbit  <http://twitter.com/vaiorabbit>
 
 	* lib/raygui_main.rb: Renamed from 'raygui.rb'
